# rustyspoty

./: .gitignore  Cargo.toml  README.md
src/: auth_code_pkce.rs  cache.rs  client.rs  client_creds.rs  error.rs  lib.rs  token_manager.rs
src/models/: album.rs  artist.rs  auth.rs  data_change_fix.rs  mod.rs  page.rs  playlist.rs  recommendations.rs  track.rs  user.rs
src/services/: auth.rs  mod.rs  playlist.rs  track.rs
